--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "backend Service for the clotheslog Application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "test": "mocha ./tests --recursive",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "lint": "jshint ."
   },
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/jerh616/wardrobe.git"
+    "type": "git",
+    "url": "https://github.com/jerh616/wardrobe.git"
   },
   "author": "",
   "license": "ISC",
@@ -19,7 +21,9 @@
     "mongodb": "^2.2.16"
   },
   "devDependencies": {
-    "nodemon": "^1.18.4",
-    "jshint": "^2.9.6"
+    "chai": "^4.2.0",
+    "jshint": "^2.9.6",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.4"
   }
 }
