--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "wardrobe",
   "version": "1.0.0",
   "description": "backend Service for the clotheslog Application",
-  "main": "index.js",
   "scripts": {
     "test": "mocha ./tests --recursive",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "lint": "jshint ."
+    "lint": "jshint .",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -22,8 +22,14 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "jshint": "^2.9.6",
     "mocha": "^5.2.0",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "undefined": "^0.1.0",
+    "webpack": "^4.28.1",
+    "webpack-cli": "^3.1.2"
   }
 }
